attempt scrollbar iOS fix

--- a/pkg/frontend/src/styles/components/carousel.module.scss
+++ b/pkg/frontend/src/styles/components/carousel.module.scss
@@ -38,6 +38,7 @@
   }
 
   &::-webkit-scrollbar {
+    display: none;
     width: 0; /* Remove scrollbar space */
     background: transparent; /* Optional: just make scrollbar invisible */
   }
