--- a/pkg/frontend/src/styles/global/global.scss
+++ b/pkg/frontend/src/styles/global/global.scss
@@ -9,12 +9,13 @@ body {
   width: 100vw;
   max-width: 100vw;
   overflow-x: hidden;
+}
 
-  @media (max-width: 991px) {
-    &::-webkit-scrollbar {
-      width: 0px;
-      background: transparent;
-    }
+@media (max-width: 991px) {
+  ::-webkit-scrollbar {
+    display: none;
+    width: 0px;
+    background: transparent;
   }
 }
 
